# LinguaFlow

./: .gitignore  AGENTS.md  BUGFIX_WORDBOOK.md  README.md  STREAMING_CHAT_IMPLEMENTATION.md
.mimocode/skills/fullstack-feature/: SKILL.md
backend/: README.md  config.docker.toml  config.toml.example  go.mod  go.sum  main.go
backend/cmd/enrich_wordbooks/: main.go
backend/cmd/fix_wordbook/: main.go
backend/config/: config.go
backend/database/: db.go  seed.go
backend/handlers/: admin_article.go  article.go  article_quiz_test.go  auth.go  study.go  translation.go  video_learning.go  video_understanding.go  vocab_ai.go  wordbook.go  wordbook_ai.go  wordbook_test.go
backend/models/: models.go  wordbook.go
backend/services/: ai_analysis.go  article_analysis.go  article_analysis_test.go  baidu_dictionary.go  dictionary.go  eliaschen_dictionary.go  knowledge_graph.go  knowledge_graph_test.go  rss_importer.go  rss_importer_test.go  study_notes.go  video_learning.go  video_media.go  video_subtitles.go  video_subtitles_test.go  video_transcription.go  video_understanding.go
docs/compose/plans/: 2025-06-11-favorite-folders.md  2026-06-13-ai-study-notes.md
docs/design/: wordbook-module.md
docs/development/: README.md  gin-backend.md  nextjs-frontend.md  video-bilingual-subtitles.md  video-learning.md  vocabulary-learning.md  youtube-caption-technology.md
frontend/: package-lock.json
frontend/src/lib/: ao3.ts  (+3 more)
local-asr/funasr/: README.md  download-model.sh  faster_whisper_server.py  main.py  pyproject.toml  start-faster-whisper.sh  start-funasr.sh  sync-env.sh
(+33 files in other folders)
