[project]
name = "gugudu-funasr"
version = "0.1.0"
description = "Local FunASR server for GuGuDu video learning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "funasr",
  "torch",
  "torchaudio",
  "huggingface-hub",
  "fastapi",
  "faster-whisper",
  "uvicorn",
  "python-multipart",
]
